<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >
        <item
            android:id="@+id/nav_home"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/nav_downloads"
            android:title="@string/txt_my_downloads" />
        <item
            android:id="@+id/nav_customization"
            android:title="@string/txt_my_customization" />
        <item android:id="@+id/nav_notification"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/txt_notifications"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/txt_myprofile" />
        <item
            android:id="@+id/nav_account_setting"
            android:title="@string/txt_account_setting" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/txt_log_out" />

    </group>
</menu>
