<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >
        <item
            android:id="@+id/nav_home"
            android:title="@string/txt_home" />
        <item
            android:visible="false"
            android:id="@+id/nav_report"
            android:title="Report" />
        <item
            android:id="@+id/nav_corp_contest"
            android:title="@string/txt_contest" />
        <item
            android:id="@+id/nav_content_for_approval"
            android:title="@string/txt_content_approval" />
        <item android:id="@+id/nav_notification"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/txt_notifications">
        </item>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/txt_myprofile" />
        <item
            android:id="@+id/nav_account_setting"
            android:title="@string/txt_account_setting" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/txt_log_out" />

    </group>
</menu>
