<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/txtRecentCommentText"
        fontPath="fonts/SanFranciscoText-Regular_0.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="@dimen/add_corp_tv_margin_top"
        android:text="@string/recent_comment"
        android:textSize="@dimen/text_size_contact_us" />

    <TextView
        android:id="@+id/txtViewMoreComment"
        fontPath="fonts/SanFranciscoText-Regular_0.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/add_corp_tv_margin_top"
        android:text="More Comments"
        android:textSize="@dimen/text_size_contact_us" />

    <TextView
        android:id="@+id/txtRecentComments"
        fontPath="fonts/SanFranciscoText-Regular_0.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_below="@id/txtRecentCommentText"
        android:layout_marginTop="@dimen/add_corp_tv_margin_top"
        android:background="@drawable/btn_shadow_corner"
        android:gravity="start"
        android:maxLines="3"
        android:ellipsize="end"
        android:inputType="text|textCapSentences|textNoSuggestions|textMultiLine"
        android:padding="5dp"
        android:textSize="@dimen/text_size_contact_us" />

    <TextView
        android:id="@+id/txtYourComment"
        fontPath="fonts/SanFranciscoText-Regular_0.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_below="@id/txtRecentComments"
        android:layout_marginTop="@dimen/add_corp_tv_margin_top"
        android:text="@string/your_comment"
        android:textSize="@dimen/text_size_contact_us" />

    <EditText
        android:id="@+id/edtJustification"
        fontPath="fonts/SanFranciscoText-Regular_0.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_below="@id/txtYourComment"
        android:layout_marginTop="@dimen/add_corp_tv_margin_top"
        android:background="@drawable/btn_shadow_corner"
        android:gravity="start"
        android:hint="@string/write_some_description"
        android:inputType="text|textCapSentences|textNoSuggestions|textMultiLine"
        android:minHeight="@dimen/act_add_corp_write_des_edt_heigh"
        android:padding="5dp"
        android:textSize="@dimen/text_size_contact_us" />

</RelativeLayout>